# fluxvla_data_collection

./: .gitignore  CMakeLists.txt  LICENSE  POST_PROCESSING.md  README.md  package.xml  setup.py
config/: dual_franka_collection.yaml  processing_dual_franka.yaml  processing_ur3.yaml  ur3_collection.yaml
scripts/: collect_data_generic_parquet.py  convert_fluxvla_to_lerobot.py  generate_fluxvla_annotations.py  preprocess_fluxvla_parquet.py
src/fluxvla_data_collection/: __init__.py  config.py  control.py  registry.py  ros_types.py  row_builder.py  sync.py  writer.py
src/fluxvla_data_collection/converters/: __init__.py  computed.py  franka.py  geometry.py  gripper.py  images.py  raw.py  sensor.py  std_msgs.py
src/fluxvla_data_collection/processing/: __init__.py  annotation.py  array_builder.py  lerobot_export.py  parquet_io.py  preprocess.py  spec.py  video_writer.py
